VDR Plugin 'epgsearch' Revision History
---------------------------------------
2023-05-28
fixes:
- Changed wenig to Wenig in German messages
- Avoid division by zero if StopTime-Starttime=0

2023-01-09; Version 2.4.2
new:
- Use perlregex-library pcre2 if available
fixes:
- timers not marked as done if 2 recordings stop same time
- remove dead code
- update spanish translation
- fix memory leaks
- do not lose recordingtime at change to winter time (kfb77)

2022-02-01
new:
- Evaluate vdr's Errorcount (vdr > 2.5.x)
  New config "Allowed Errors"
- Allow missing timer-Object in Recording-Done-Processing
  (vdr > 2.5.x compatibility)

2021-12-10
fixes:
- Wrong device selection for conflict check
- compareSubtitle supports more than 2 values

2021-05-24; Version 2.4.1
fixes:
- Fixed conflictcheck for encrypted channels with internal CAMs
- Fixed compiling with gcc11
- Updated deprecated calls to SetItemEvent
- Temporally(?) added #define DISABLE_TEMPLATES_COLLIDING_WITH_STL for
  compatibility with vdr 2.5.4

2021-04-12
new:
- Improved handling of remote timers
- Replace auto_ptr with unique_ptr for c++11 (kfb77@vdr-portal.de)
- Delay threads after pluginstart 10 secs (configurable)
- Changed fgets to allow compiling with clang
- Clarified "avoid repeats". Forced subtitle-comparison is named "yes" again
  New option "allow empty"
fixes:
- Fixed several lock sequence errors
- Fix utf-8 encoding in docs and manpages (kfb77 and seahawk1986@vdr-portal.de)
- Fixed possible format overflow
- Fixed displaying NAME in generated manpages thanks to etobi

2018-04-16; Version 2.4.0
new:
- Create man pages only once. by jasminj@vdr-portal.de
- Remove useless member "useEpisode" from cBlacklist by jasminj@vdr-portal.de
- Remove useless member "useEpisode" from cBlacklist by jasminj@vdr-portal.de
- Remove useless "LOCK_CHANNELS_READ" in cBlacklist run by jasminj@vdr-portal.de
- Change shell in docsrc2*.sh to /bin/bash, suggested by TomJoad@vdr-portal.de