@@ -1,5 +1,9 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+2023-06-08
+fixes:
+- Begrenzung Untertitellänge aufgehoben (firefly)
+
 2023-05-28
 fixes:
 - deutsche Messages Satzanfang gross
