@@ -1,5 +1,9 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+2023-06-08
+fixes:
+- removed subtitle limit (firefly)
+
 2023-05-28
 fixes:
 - Changed wenig to Wenig in German messages
